--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
     >
         <activity
                 android:name=".ui.MainActivity"
-                android:theme="@style/AppTheme.NoActionBar"
+                android:theme="@style/AppTheme.Splash"
                 android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
