--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,9 @@ ext {
     okHttpUrlConnectionVersion = '3.13.1'
 
     archLifecycleVersion = '1.1.1'
+    roomVersion = '1.1.1'
     archPagingVersion = '1.0.1'
 
    picassoVersion = '2.71828'
+    debugDbVersion = '1.0.1'
 }
